--- a/skills/csharp/experimental/bingsearchskill/Responses/CommonStrings.tt
+++ b/skills/csharp/experimental/bingsearchskill/Responses/CommonStrings.tt
@@ -1,3 +1,3 @@
 <#@ template debug="false" hostspecific="true" language="C#" #>
 <#@ output extension=".cs" #>
-<#@ include file="..\Shared\LgIdCollection.t4"#>
+<#@ include file="Shared\LgIdCollection.t4"#>
