--- a/skills/csharp/emailskill/Responses/ShowEmail/ShowEmailResponses.tt
+++ b/skills/csharp/emailskill/Responses/ShowEmail/ShowEmailResponses.tt
@@ -1,3 +1,3 @@
 ﻿<#@ template debug="false" hostspecific="true" language="C#" #>
 <#@ output extension=".cs" #>
-<#@ include file="..\Shared\LgIdCollection.t4"#>
+<#@ include file="..\Shared\ResponseIdCollection.t4"#>
