--- a/experimental/generator-dotnet-yeoman/generators/app/templates/webapp/wwwroot/default.htm
+++ b/experimental/generator-dotnet-yeoman/generators/app/templates/webapp/wwwroot/default.htm
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>__PROJECT_NAME__</title>
+    <title><%= botName %></title>
     <style>
         body {
             margin: 0px;
@@ -338,7 +338,7 @@
     <header class="header">
         <div class="header-inner-container">
             <div class="header-icon" style="display: inline-block"></div>
-            <div class="header-text" style="display: inline-block">__PROJECT_NAME__</div>
+            <div class="header-text" style="display: inline-block"><%= botName %></div>
         </div>
     </header>
     <div class="row">
